Change one InstallmentType's name and value
Changed InstallmentType enum RIGHT_OF_RESIDENCE_FEE to
RIGHT_OF_OCCUPANCY_PAYMENT to be consistent with the Drupal/ES side.
Changing the value is not easy with Django ORM because it is a
EnumField, so raw SQL is used for that.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -250,7 +250,7 @@ msgid "late payment interest"
 msgstr "Viivästyskorko"
 
 #: invoicing/enums.py:32
-msgid "right of residence fee"
+msgid "right of occupancy payment"
 msgstr "AO-maksu"
 
 #: invoicing/enums.py:33
